tests/baselines/reference/ES5For-ofTypeCheck10(target=es5).errors.txt
ES5For-ofTypeCheck10.ts(14,15): error TS2802: Type 'MyStringIterator' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.


==== ES5For-ofTypeCheck10.ts (1 errors) ====
    // In ES3/5, you cannot for...of over an arbitrary iterable.
    class MyStringIterator {
        next() {
            return {
                done: true,
                value: ""
            };
        }
        [Symbol.iterator]() {
            return this;
        }
    }
    
    for (var v of new MyStringIterator) { }
                  ~~~~~~~~~~~~~~~~~~~~
!!! error TS2802: Type 'MyStringIterator' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.